[tool.poetry]
name = "markdown2html"
version = "0.1.0"
description = "CLI Markdown to HTML converter tool"
authors = ["Your Name <you@example.com>"]
license = "MIT"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0.0"
markdown2 = "^2.4.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"